# VitjetsBank

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: operations.json
report/: index.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  templates.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_src_masks.py  test_src_processing.py  test_src_widget.py  test_templates.py  test_utils.py  tests_generators.py  tests_src.py  tests_src_masks.py  tests_src_processing.py  tests_src_widget.py
