[project]
name = "popopopo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pytest = "^8.3.4"
chardet = "^5.2.0"
requests = "^2.32.3"
logging = "^0.4.9.6"
pandas = "^2.2.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest-cov = "^6.0.0"
chardet = "^5.2.0"


[tool.poetry.group.link.dependencies]
pytest-cov = "^6.0.0"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'